# python-mcp

./: LICENSE  README.md  pyproject.toml  requirements.txt  server.py
data/: aboutthis.json  persons.json
